--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-#Arquivos dados pelo professor
-*.docx
-*.doc
 #Arquivos de Obj e Executáveis
 *.o
 *.exe
+#Arquivos do CodeBlocks
+*.cbp
+*.layout
+*.depend
 #Arquivos gerados por Main
 *.txt
